updated pages and screenshots

--- a/docfx_project/site/home/techguides/artifactory-test-cycle.html
+++ b/docfx_project/site/home/techguides/artifactory-test-cycle.html
@@ -84,7 +84,7 @@
 <p>Temenos uses JFrog Artifactory that serves as a binary repository manager and which is designed to provide an end to end automated solution for tracking artifacts from development to production.</p>
 <p>See below an example of how the Artifactory folders look like after configuring the streams, stages, components, products and the factory. </p>
 <p><img src="images/artifactory-test-structure.png" alt=""></p>
-<p>After <a href="factories.html#set-up-create-a-factory" target="blank"><strong>creating a Factory</strong></a> and before running it, make sure you have uploaded:</p>
+<p>After <a href="factories.md#set-up-create-a-factory" target="blank"><strong>creating a Factory</strong></a> and before running it, make sure you have uploaded:</p>
 <ul>
 <li><p>all required binaries for the principle (mandatory) components into the <strong>source</strong> stage (in this case - default_stage).</p>
 </li>
