--- a/docfx_project/site/home/techguides/clone-environment.html
+++ b/docfx_project/site/home/techguides/clone-environment.html
@@ -96,15 +96,15 @@
 </ul>
 </div>
 <h2 id="clone-the-environment">Clone the Environment</h2>
-<ul>
-<li>Select the environment that you want to clone and press <strong>Clone</strong> button.</li>
-</ul>
-<p><img src="images/clone-button.png" alt=""> </p>
-<p><br></p>
-<ul>
-<li>Input a <strong>Name</strong> and <strong>Description</strong> and optionally, a <em>Label</em>, then click <strong>Clone</strong>. </li>
-<li>You will get a notification on the screen that the environment cloning has been initiated.</li>
-</ul>
+<ol>
+<li><p>On the environment screen click on <strong>Actions</strong> and select the <strong>Clone</strong> button from the drop-down.</p>
+</li>
+<li><p>Fill in the <strong>Name</strong> and <strong>Description</strong>. It is optional to add a <strong>Label</strong>.</p>
+</li>
+<li><p>Click <strong>Clone</strong>. </p>
+</li>
+</ol>
+<p>You will receive a notification on the screen that the environment cloning has been initiated.</p>
 <p><img src="images/clone-env-details.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>Use the <strong>Refresh List</strong> button in order to see the new actions.</p>
 </div>
@@ -113,11 +113,11 @@
 <li>The new (clone-environment) will have the same template as the source environment.</li>
 <li>In the Event Tab of the source Environment (the one being cloned), the Event notifications will display the date, time and duration of the Cloning action.</li>
 <li>The <strong>Clone</strong> button will be disabled until on the left side of the screen you will notice the new cloned environment being created.<ul>
-<li>The new environment will be visible in the Environments list with the status <strong>Creating</strong>:</li>
+<li>The new environment will be visible in the Environments list with the status <strong>Cloning</strong>:</li>
 </ul>
 </li>
 </ul>
-<p><img src="images/clone-refresh.png" alt=""> </p>
+<p><img src="./images/clone-refresh.png" alt=""></p>
 <ul>
 <li>The target environment (clone) will display the status <strong>Creating</strong> for:<ul>
 <li>T24 application</li>
