--- a/docfx_project/site/home/techguides/fix-issues-factory-run.html
+++ b/docfx_project/site/home/techguides/fix-issues-factory-run.html
@@ -87,7 +87,7 @@
 <p><strong>Note:</strong> If you wish to have a different name for the repository, you need to go to the Artifactory and create yourself a repository and then update its name in the metadata (ARTIFACTORY_URL).</p>
 <p><strong>Note:</strong> Make sure you set also the ARTIFACTORY_KEY which allows to download the components&#39; binaries at the moment when running a factory. This is when the components and test cases are used. </p>
 <h3 id="issue-1-unable-to-create-factory-due-to-wrong-product-set-up">Issue 1. Unable to Create Factory Due to Wrong Product Set-up</h3>
-<p>When setting-up a factory (see configuration steps in <a href="factories.html#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), in case the products used in the factory don&#39;t have the mandatory components uploaded, after pressing the <strong>Create</strong> button, an error similar to the example below will appear, showing the missing components:</p>
+<p>When setting-up a factory (see configuration steps in <a href="factories.md#set-up-create-a-factory" target="blank"><b>this user guide</b></a>), in case the products used in the factory don&#39;t have the mandatory components uploaded, after pressing the <strong>Create</strong> button, an error similar to the example below will appear, showing the missing components:</p>
 <p><img src="images/sanity-product-issue.png" alt=""></p>
 <h4 id="how-to-fix"><strong>How to fix:</strong></h4>
 <p>Based on the template that you want to use, when creating the principle product, make sure you add all mandatory components belonging to that template. </p>
