--- a/docfx_project/site/home/techguides/user-creation-in-paas.html
+++ b/docfx_project/site/home/techguides/user-creation-in-paas.html
@@ -85,21 +85,46 @@
 <h2 id="how-to-create-users">How to create Users</h2>
 <p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access and use the portal using the URL link. In this way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
 <p>The users can access their organisation only, view their user profiles and perform various operations according to the set of user permissions set by the Organisation Administrator.</p>
-<p> Note that only the users with the &#39;Amin&#39; permission can create more users. To create a new user, please refer to the below:</p>
+<p> Note that only the users with the &#39;Admin&#39; permission can create more users. To manage/ see the users please refer to the below:</p>
 <p>•   Login to your organisation portal using the link and the credentials provided.</p>
 <p><img src="images/user-login.png" alt="portal login"></p>
-<p>•   Go to the menu on the left and then click Users tab, as below:</p>
-<p><img src="images/users-tab.png" alt="new user"> </p>
-<p>The first screen that you will see is the one for the existing user (usually admin).</p>
-<p>Click <strong>New user</strong> button on the top-right corner:</p>
-<p><img src="D:\DocumentationPortal\temenos-platform-documentation\docfx_project\home\techguides\images\users-tab.png" alt=""></p>
+<p><img src="images/users-tab.png" alt=""></p>
+<ol>
+<li><p>Go to the menu on the left and then click Users tab, as below:</p>
+</li>
+<li><p>Click on the <strong>Users</strong> tab</p>
+</li>
+<li><p>To order the users&#39; list hover over the <strong>Name</strong> tab - the users will be listed in an alphabetical order</p>
+</li>
+<li><p>Click on the <strong>Status</strong> tab to see the status of each user (i.e. the user status can be <strong>creating, editing, failed, deleting</strong>)</p>
+</li>
+<li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Fill in the username, email, password and the user role (the SSH Key can be added later on if needed):</p>
+</li>
+</ol>
+<p><img src="images/create-user.png" alt=""></p>
+<ol>
+<li>Click <strong>Create</strong></li>
+</ol>
 <p>This will create a new user in your organisation. This new user will be automatically assigned to all GitLab Repositories from within all environments. If you have already a user created, you can click on the user and update the SSH key box with the one created above.</p>
-<blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
+<blockquote><p><strong>Important!</strong>: It is the Organisation Admin&#39;s 
+responsibility to inform the new user about its credentials and set of permissions granted on the portal.</p>
 </blockquote>
+<p>On their first login, all new users will be forced to reset the password that was initially created by the Organisation Admin.</p>
+<p><img src="images/user-change-password.png" alt="user-change-password"></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
-<p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, the admin will click on &#39;New Role&#39; and fill in the blanks:</p>
-<p><img src="images/create-user-role.png" alt="user"></p>
+<p><img src="images/see-user-role.png" alt=""></p>
+<ol>
+<li><p>Click on the <strong>Roles</strong> tab to see the available list of roles within your organisation</p>
+</li>
+<li><p>Hover over the <strong>Name</strong> tab to display the alphabetical order of the available roles</p>
+</li>
+<li><p>Select the number of items you&#39;d like to have listed on the page (this is applicable for the users&#39; tab as well)</p>
+</li>
+<li><p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, click on <strong>New Role</strong> on top-right and fill in the blanks:</p>
+</li>
+</ol>
+<p><img src="images/create-user-role.png" alt=""></p>
 <p>The admin can select which permissions to set to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
 <p>Once the role is created, the admin can assign it to a specific user:</p>
@@ -137,18 +162,16 @@
 <div class="NOTE"><h5>Note</h5><p>All fields are mandatory!
 See further below how to generate the SSH key</p>
 </div>
-<p><img src="images/user-details.png" alt="new user"></p>
 <p>•   Public SSH key needs to be pasted in SSH Key text box. Open Windows Explorer and locate your public key generated using PuTTY Key Generator. </p>
 <p><img src="images/putty-keygen-publicselect.png" alt="paste key text"></p>
 <p>• Right click and open it with notepad. Select all and copy to clipboard.</p>
 <p><img src="images/copy-key.png" alt="copy key"></p>
 <p>•   Paste the copied text into the SSH Key text box and click Create user button.</p>
 <ul>
-<li>Your user is now available in the user list:</li>
-</ul>
-<p><img src="images/user-list.png" alt="user"></p>
-<ul>
-<li>You have the option to edit or to delete it.</li>
+<li><p>Your user is now available in the user list.</p>
+</li>
+<li><p>You have the option to edit or to delete it.</p>
+</li>
 </ul>
 <div class="NOTE"><h5>Note</h5><p>Once created, you <strong>cannot</strong> change the name and the email address, nor the user&#39;s password. You can only update (or add) the SSH key through edit button.</p>
 </div>
