--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -133,13 +133,12 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <li><p>The <strong>Release Notes</strong></p>
 </li>
 <li><p>The <strong>Components List</strong> - these can be filtered as the user wants</p>
+<p><img src="images/template-components-list.png" alt=""></p>
+</li>
+<li><p>The <strong>Template Content</strong></p>
+<p><img src="images/templates-content.png" alt=""></p>
 </li>
 </ol>
-<p><img src="images/template-components-list.png" alt=""></p>
-<ol>
-<li>The <strong>Template Content</strong></li>
-</ol>
-<p><img src="images/templates-content.png" alt=""></p>
 <h1 id="user-roles-required">User Roles Required#</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
