--- a/home/techguides/deploy-an-update-to-an-existing-environment.html
+++ b/home/techguides/deploy-an-update-to-an-existing-environment.html
@@ -139,7 +139,7 @@
 </tr>
 <tr>
 <td>updates</td>
-<td>The updates   files downloaded from the portal in zip format. The files will be copied to   the update folder and the T24 Update procedure is triggered.</td>
+<td>The updates   files downloaded from the portal in .zip of .zip format. The files will be copied to   the update folder and the T24 Update procedure is triggered.</td>
 </tr>
 <tr>
 <td>wsdl</td>
@@ -306,15 +306,15 @@
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
-<li>UPDATE _ USER (to add the SSH Key if this hasn&#39;t been done after creating the user)</li>
-<li>CREATE _ ENVIRONMENT</li>
-<li>UPDATE _ ENVIRONMENT</li>
-<li>DELETE _ ENVIRONMENT</li>
-<li>BOOST _ ENVIRONMENT</li>
-<li>REDEPLOY _ ENVIRONMENT</li>
-<li>START _ ENVIRONMENT</li>
-<li>STOP _ ENVIRONMENT</li>
-<li>MANAGE _ ENVIRONMENTS</li>
+<li>UPDATE_USER (it is required to add the SSH Key if this hasn&#39;t been done after creating the user)</li>
+<li>CREATE_ENVIRONMENT</li>
+<li>UPDATE_ENVIRONMENT</li>
+<li>DELETE_ENVIRONMENT</li>
+<li>BOOST_ENVIRONMENT</li>
+<li>REDEPLOY_ENVIRONMENT</li>
+<li>START_ENVIRONMENT</li>
+<li>STOP_ENVIRONMENT</li>
+<li>MANAGE_ENVIRONMENTS</li>
 </ul>
 <p>To have a better understanding of the user permissions, hover the cursor over the variables and a short description will pop up or click <a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a> to read more.</p>
 <p><br></p>
