--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -93,6 +93,7 @@
 <li><p><strong>COB</strong> -  runs various processes that are split into 5 stages (Individual application processes,  system wide processes, main system reports,  start of day such as standing orders, split month end events, cash flow maintenance and so on-, and online -any non-critical reports and processes which can be run after the system has returned to online mode)</p>
 <ul>
 <li>based on your contract, the COB button may/ may not appear to all users in the workflow customization stage. </li>
+<li>see what happens when COB is triggered in a Temenos Continuous Deployment environment <strong><a href="http://documentation.temenos.cloud/home/techguides/trigger-cob.html">here</a></strong></li>
 </ul>
 <p><img src="images/workflow-cob.png" alt=""> </p>
 </li>
