--- a/home/toc.html
+++ b/home/toc.html
@@ -181,13 +181,13 @@
                     <a href="techguides/manage-workflows.html" name="" title="Manage Workflows">Manage Workflows</a>
                   </li>
                   <li>
+                    <a href="techguides/trigger-cob.html" name="" title="What Happens when COB is triggered">What Happens when COB is triggered</a>
+                  </li>
+                  <li>
                     <a href="techguides/automated-factories.html" name="" title="Manage Automated Factories">Manage Automated Factories</a>
                   </li>
                   <li>
                     <a href="techguides/manage-test-scripts.html" name="" title="Manage Test Scripts">Manage Test Scripts</a>
-                  </li>
-                  <li>
-                    <a href="techguides/stage-testcases.html" name="" title="Manage Test Cases Upload">Manage Test Cases Upload</a>
                   </li>
                   <li>
                     <a href="techguides/run-factory.html" name="" title="Run a Factory with &quot;Run Now&quot; Button and Dashboard">Run a Factory with &quot;Run Now&quot; Button and Dashboard</a>
