--- a/home/techguides/automated-factories.html
+++ b/home/techguides/automated-factories.html
@@ -164,6 +164,7 @@ Test Stage: represents a stable version of components that is pre-tested from th
 <ul>
 <li>type in the ID of the TSA.SERVICE record for which COB has to be run. The id can be either group specific id (eg: COB-1, COB-001) , company specific id (eg: COB-GB0010001) or COB. Important: currently the platform can handle 20 agents at max, including the online services.</li>
 </ul>
+<p>To get a better understanding of what happens when COB is triggered please refer to <a href="http://documentation.temenos.cloud/home/techguides/trigger-cob.html">THIS</a> user guide.</p>
 <p><br>
 </br></p>
 <h2 id="promotion-configuration">Promotion Configuration</h2>
