--- a/home/toc.html
+++ b/home/toc.html
@@ -181,7 +181,7 @@
                     <a href="techguides/manage-workflows.html" name="" title="Manage Workflows">Manage Workflows</a>
                   </li>
                   <li>
-                    <a href="techguides/trigger-cob.html" name="" title="What Happens when COB is triggered">What Happens when COB is triggered</a>
+                    <a href="techguides/trigger-cob.html" name="" title="What happens when COB is triggered">What happens when COB is triggered</a>
                   </li>
                   <li>
                     <a href="techguides/automated-factories.html" name="" title="Manage Automated Factories">Manage Automated Factories</a>
