--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -178,7 +178,10 @@
                     <a href="techguides/components-products.html" name="" title="Manage Components and Products">Manage Components and Products</a>
                   </li>
                   <li>
-                    <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
+                    <a href="techguides/manage-workflows.html" name="" title="Manage Workflows">Manage Workflows</a>
+                  </li>
+                  <li>
+                    <a href="techguides/automated-factories.html" name="" title="Manage Automated Factories">Manage Automated Factories</a>
                   </li>
                   <li>
                     <a href="techguides/manage-test-scripts.html" name="" title="Manage Test Scripts">Manage Test Scripts</a>
